{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "552d7ca9-50a8-4d8e-a5da-51cc7abd163c",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "2a0729b2-dbe9-484f-a6ad-75e62adb8be8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "89de6d17-e17d-4335-beb0-0d6ea9824b10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "3c1f5556-e27a-4458-bfa4-85e21e4ab5ff",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "07985b99-8ed2-4706-92c6-c4171d0bf7e9",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fecf0326-46be-4cf1-9ab7-34e1425d2281",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2482c291-4a52-444f-8987-f7f86f6e4c98",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "id": "d92d359d-7316-44b6-a5bd-beb1fc16352d",
            "actions": [
                {
                    "name": "MoveStick",
                    "type": "PassThrough",
                    "id": "556f88c3-3853-4c33-87a3-f98f564b33b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f07a7238-1808-40bf-9a6b-2d04a5982239",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}